css/style.css
/*

Welcome to the CSS of this website 
‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
Here you will find the syling for the base version of 
this website, as well as SearchMode and DevMode.

OMDD and I decedied to go with the BEM naming convention to minimize errors with both
of us working on it. https://en.bem.info/methodology/naming-convention/

*/



/* ? Foundation (Variables, Typography, Resets etc.) */
/* * Atoms Single Elements (Buttons,...) */
/* ^ Blocks & Elements (Footer,Nav,...)




/* 
_________
✦ Foundations ✦
‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
*/


/* ? Dev View */
/* *{background-color: chartreuse;}
* > *{background-color:coral ;}
* > * > *{background-color: cornflowerblue;}
* > * > * > *{background-color: darkkhaki;}
* > * > * > * > *{background-color: darkorchid;}
* > * > * > * > * > *{background-color: orangered ;}
* > * > * > * > * > * > *{background-color: thistle ;}
* > * > * > * > * > * > * > *{background-color: peru ;}
* > * > * > * > * > * > * > * > *{background-color: green ;}
* > * > * > * > * > * > * > * > * > *{background-color: palevioletred ;}
* > * > * > * > * > * > * > * > * > * > *{background-color: rgb(123, 255, 116) ;}
* > * > * > * > * > * > * > * > * > * > * > *{background-color: yellow ;} */


/* For Exhibition Only */
/* a{
    pointer-events: none !important;
} */




/* ? Browser Reset */

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    max-width: 100%;
}


/* ? CSS Variables */
:root {

    /* Colors */
    --color-primary: #000000;
    --color-secondary: #FFFFFF;

    --color-DevMode: #792cff;
    --color-online: springgreen;
    /* --color-search: #e6dcff;  not used right now  */


    /* Typography */
    --font-primary: 'SF Pro Display', '-apple-system', 'BlinkMacSystemFont', 'San Francisco', 'Helvetica Neue', 'Helvetica', 'Ubuntu', 'Roboto', 'Noto', 'Segoe UI', 'Arial', sans-serif;

    /* Defines how tall the the inner part of the accordion is */
    --contentMaxHeight: 33rem;
    --contentMaxHeightInner:calc(var(--contentMaxHeight) * 0.79);

    /* Spacing */
    --spacing-none: 0;
    --spacing-xxs: .25rem;
    --spacing-xs: .5rem;
    --spacing-sm: 1rem;
    --spacing-md: 2rem;
    --spacing-lg: 3rem;
    --spacing-xl: 4rem;

    /* Radius */
    --radius-xs: .5rem;
    --radius-sm: 1rem;
    --radius-lg: 2rem;

    /* Font Sizes */
    --font-sm:.75rem;
    --font-md: 1rem;
    --font-lg: 1.5rem;


}


/* ? Selection Styling */
::selection{
    /* Color */
    background-color: var(--color-primary);
    color: var(--color-secondary);

    /* Animation */
    transition: background-color 750ms ease;

}



/* ? Typography */
h1,h2,h3,h4,h5,h6 {
    /* Layout */
    margin: 0;

    /* Typography */
    font-size: var(--font-md);
    text-decoration: none;
    font-weight: normal;

}

p {
    /* Typography */
    font-size: var(--font-md);
    hyphens: auto; /* Hypenation when there is a linebreak */

    hyphenate-limit-chars: 7 4 4;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

li {
    /* Typography */
    list-style: none;
}

a{
    /* Color */
    color: var(--color-primary);

    /* Interaction */
    cursor: pointer;
}



/* ? Body Base Styling */
body {
    /* Layout */
    padding: 0;
    margin: 0;

    /* Interaction */
    overflow-y: scroll;

    /* Color */
    color: var(--color-primary);
    background-color: var(--color-secondary);

    /* Typography */
    font-family: var(--font-primary);

    /* Animation */
    transition: background-color 750ms ease; 
}







/* 
____________________
✦ Single reusable Elements ✦
‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾

*/



/* * Buttons */

.button-primary {
    /* Layout */
    width: fit-content;
    height: fit-content;
    padding: var(--spacing-xxs);
    border-radius: var(--radius-lg);

    /* Interaction */
    cursor: pointer;
    user-select: none;

    /* Color */
    color: var(--color-primary);
    border: 1px solid;

    /* Typography */
    text-decoration: none;
    text-transform: uppercase;
    white-space: nowrap;

    /* Animation */
    transition: background-color 750ms ease;


}

.button-secondary {
    /* Interaction */
    cursor: pointer;
    user-select: none;

    /* Color */
    color: var(--color-secondary);

    /* Animation */
    transition: background-color 750ms ease;
}

.button-extraSpacing{
    /* Layout */
    padding-left: var(--spacing-xs);
    padding-right: var(--spacing-xs);
}


/* * Tags */

.tag {
    /* Layout */
    width: fit-content;
    height: fit-content;
    padding: var(--spacing-xxs);
    border-radius: var(--radius-sm);
    border-color: var(--color-primary);

    /* Interaction */
    cursor: pointer;
    user-select: none;

    /* Color */
    background-color: var(--color-secondary);
    color: var(--color-primary);
    border: 1px solid;
   
    /* Typography */
    font-size: var(--font-sm);
    font-family: var(--font-primary);
    text-transform: uppercase;
    white-space: nowrap;

    /* Animation */
    transition: background-color 750ms ease;
}


.tag--inverted {
    /* Layout */
    padding-left: var(--spacing-xs);
    padding-right: var(--spacing-xs);
    
    /* Color */
    background-color: var(--color-primary);
    color: var(--color-secondary);
    border: none;

    /* Animation */
    transition: background-color 750ms ease;

}

.tag--delete.active{
    /* Add a litttel shake animation on hover */
    animation: deleteShake 750ms ease infinite;
}
    /* Animation Frames for .tag--delete */
    @keyframes deleteShake {
        0%, 75%, 100% {transform: rotate(0deg);}
        25% {transform: rotate(-3deg);}
        50% {transform: rotate(3deg);}
    }

.tag--delete::before{
    content: 'Ｘ '
}


/* * Cursor Options */
.filter{
    /* Interaction */
    cursor: pointer !important;
    
    /* Animation */
    transition: background-color 750ms ease;
}
/* ... */

